# prism-video

./: CHANGELOG.md  DEVELOPMENT_STATUS.md  LICENSE  README.md  package.json
.github/workflows/: build-native.yml
Editor/: Prism.Editor.asmdef  PrismFFmpegPlayerEditor.cs  PrismMenuItems.cs  PrismPlayerEditor.cs
Native/: BUILD.md  CMakeLists.txt  build_unix.sh  build_windows.bat
Native/include/: prism_ffmpeg.h
Native/src/: prism_ffmpeg.c
Plugins/Windows/x86_64/: prism_ffmpeg.lib
Plugins/macOS/: libprism_ffmpeg.dylib
Runtime/: MinimalVideoTest.cs  Prism.Runtime.asmdef  PrismAudio.cs  PrismPlayer.cs  PrismRenderer.cs  PrismTestSetup.cs
Runtime/FFmpeg/: Prism.FFmpeg.asmdef  PrismFFmpegBridge.cs  PrismFFmpegPlayer.cs
Runtime/Streaming/: DirectUrlResolver.cs  IStreamResolver.cs  StreamResolverFactory.cs  YtdlpDownloader.cs  YtdlpResolver.cs
Runtime/UI/: Prism.UI.asmdef  VideoPlayerUI.cs
Runtime/WebRTC/: IPrismWebRTCProvider.cs  PrismWebRTCReceiver.cs
